Initial queue drawer design and interactions

--- a/src/TagzApp.Storage.Postgres/TagzApp.Storage.Postgres.csproj
+++ b/src/TagzApp.Storage.Postgres/TagzApp.Storage.Postgres.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\TagzApp.Communication\TagzApp.Communication.csproj" />
     <ProjectReference Include="..\TagzApp.Security\TagzApp.Security.csproj" />
     <ProjectReference Include="..\TagzApp.Storage.Postgres.Security\TagzApp.Storage.Postgres.Security.csproj" />
+    <ProjectReference Include="..\TagzApp.ViewModels\TagzApp.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
