--- a/src/TagzApp.Web/appsettings.json
+++ b/src/TagzApp.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "AppConfigProvider": "Postgres",
-    "AppConfigConnection": "Server=localhost;Port=5432;Database=postgres;User Id=tagz;Password=tagz;"
+    "AppConfigConnection": "Server=localhost;Port=5432;Database=postgres;User Id=tagz;Password=tagz;Include Error Detail=true;"
   },
   "AllowedHosts": "*"
 }
