--- a/src/TagzApp.Providers.Mastodon/TagzApp.Providers.Mastodon.csproj
+++ b/src/TagzApp.Providers.Mastodon/TagzApp.Providers.Mastodon.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TagzApp.Common\TagzApp.Common.csproj" />
+    <ProjectReference Include="..\TagzApp.Common.Client\TagzApp.Common.Client.csproj" />
     <ProjectReference Include="..\TagzApp.Communication\TagzApp.Communication.csproj" />
   </ItemGroup>
 </Project>
