--- a/src/TagzApp.Providers.YouTubeChat/TagzApp.Providers.YouTubeChat.csproj
+++ b/src/TagzApp.Providers.YouTubeChat/TagzApp.Providers.YouTubeChat.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TagzApp.Common\TagzApp.Common.csproj" />
+    <ProjectReference Include="..\TagzApp.Common.Client\TagzApp.Common.Client.csproj" />
     <ProjectReference Include="..\TagzApp.Communication\TagzApp.Communication.csproj" />
   </ItemGroup>
 </Project>
