--- a/src/TagzApp.LocationMigration/TagzApp.LocationMigration.csproj
+++ b/src/TagzApp.LocationMigration/TagzApp.LocationMigration.csproj
@@ -1,10 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>8be839c7-8387-453d-a941-cc075e02d68f</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
